--- a/stm32f103_hal_usart_dma_ringbuffer/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/stm32f103_hal_usart_dma_ringbuffer/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -26,34 +26,33 @@ Project File Date:  05/23/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'stm32f103zet6'
-compiling dma.c...
-compiling gpio.c...
-compiling stm32f1xx_hal_msp.c...
+Build target 'stm32f103zet6'
 compiling main.c...
-assembling startup_stm32f103xe.s...
-compiling stm32f1xx_it.c...
-compiling usart.c...
 compiling system_stm32f1xx.c...
+compiling stm32f1xx_hal_msp.c...
+compiling gpio.c...
+compiling dma.c...
+compiling usart.c...
+compiling stm32f1xx_it.c...
 compiling lwrb_ex.c...
-compiling stm32f1xx_hal_tim_ex.c...
 compiling stm32f1xx_hal_tim.c...
 compiling stm32f1xx_hal_gpio_ex.c...
-compiling bsp_usart_hal.c...
+compiling stm32f1xx_hal_tim_ex.c...
 compiling lwrb.c...
+compiling bsp_usart_hal.c...
 compiling stm32f1xx_hal.c...
 compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_uart.c...
 compiling stm32f1xx_hal_dma.c...
 compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_flash.c...
-compiling stm32f1xx_hal_uart.c...
 compiling stm32f1xx_hal_exti.c...
+compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_flash_ex.c...
 linking...
-Program Size: Code=9926 RO-data=378 RW-data=144 ZI-data=9432  
+Program Size: Code=9744 RO-data=380 RW-data=144 ZI-data=9432  
 FromELF: creating hex file...
 "stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
@@ -79,7 +78,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
