--- a/bootloader03_stm32f103_JumpApp/Bootloader/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/bootloader03_stm32f103_JumpApp/Bootloader/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -22,11 +22,15 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 D:\Coding\MCU_Develop\bootloader03_stm32f103_JumpApp\Bootloader\MDK-ARM\stm32f103zet6.uvprojx
-Project File Date:  05/25/2025
+Project File Date:  05/26/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'stm32f103zet6'
+compiling app_jump.c...
+linking...
+Program Size: Code=11840 RO-data=644 RW-data=144 ZI-data=10776  
+FromELF: creating hex file...
 "stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
