--- a/bootloader03_stm32f103_boot_entry/Bootloader/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/bootloader03_stm32f103_boot_entry/Bootloader/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -21,16 +21,45 @@ Target DLL:      Segger\JL2CM3.dll V2.99.43.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\Coding\MCU_Develop\bootloader04_stm32f103_JumpApp\Bootloader\MDK-ARM\stm32f103zet6.uvprojx
+D:\Coding\MCU_Develop\bootloader03_stm32f103_boot_entry\Bootloader\MDK-ARM\stm32f103zet6.uvprojx
 Project File Date:  05/26/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'stm32f103zet6'
+Rebuild target 'stm32f103zet6'
+compiling dma.c...
+assembling startup_stm32f103xe.s...
+compiling gpio.c...
+compiling stm32f1xx_it.c...
+compiling stm32f1xx_hal_msp.c...
+compiling main.c...
+compiling usart.c...
+compiling system_stm32f1xx.c...
+compiling lwrb_ex.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_tim.c...
+compiling bsp_usart_hal.c...
+compiling lwrb.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_uart.c...
+compiling stm32f1xx_hal_exti.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling SEGGER_RTT_printf.c...
+assembling SEGGER_RTT_ASM_ARMv7M.S...
+compiling retarget_rtt.c...
 compiling boot_entry.c...
 compiling app_jump.c...
+compiling SEGGER_RTT.c...
 linking...
-Program Size: Code=11980 RO-data=640 RW-data=144 ZI-data=10776  
+Program Size: Code=11616 RO-data=432 RW-data=144 ZI-data=10776  
 FromELF: creating hex file...
 "stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
@@ -56,7 +85,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
