--- a/bootloader04_stm32f103_jump_app/App/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/bootloader04_stm32f103_jump_app/App/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -27,6 +27,27 @@ Project File Date:  05/27/2025
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'stm32f103zet6'
+compiling stm32f1xx_ll_pwr.c...
+compiling stm32f1xx_ll_gpio.c...
+compiling stm32f1xx_ll_exti.c...
+compiling stm32f1xx_it.c...
+compiling stm32f1xx_ll_rcc.c...
+compiling gpio.c...
+compiling main.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_ll_utils.c...
+compiling lwrb_ex.c...
+compiling bsp_systick.c...
+compiling lwrb.c...
+compiling myCanDrive_reg.c...
+compiling myUsartDrive_reg.c...
+compiling retarget_rtt.c...
+compiling SEGGER_RTT_printf.c...
+compiling MultiTimer.c...
+compiling SEGGER_RTT.c...
+linking...
+Program Size: Code=4912 RO-data=336 RW-data=4 ZI-data=7396  
+FromELF: creating hex file...
 "stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -51,7 +72,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
