--- a/bootloader05_stm32f103_compile_bin_iap_file/App/MDK-ARM/Outputs/App.build_log.htm
+++ b/bootloader05_stm32f103_compile_bin_iap_file/App/MDK-ARM/Outputs/App.build_log.htm
@@ -28,11 +28,16 @@ Project File Date:  05/28/2025
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'stm32f103zet6'
 compiling bsp_systick.c...
-compiling main.c...
 linking...
 Program Size: Code=4912 RO-data=336 RW-data=4 ZI-data=7396  
 FromELF: creating hex file...
 After Build - User command #1: C:\Keil_v5\ARM\ARMCC\bin\fromelf.exe --bin --output .\Output\App.bin .\Outputs\App.axf
+After Build - User command #2: crc_add.bat
+===============================
+ Add CRC32 to App.bin
+===============================
+App.bin size: 5256 bytes
+CRC32 appended successfully: .\Output\App_crc.bin
 ".\Outputs\App.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
