--- a/bootloader05_stm32f103_compile_bin_iap_file/App/MDK-ARM/Outputs/App.build_log.htm
+++ b/bootloader05_stm32f103_compile_bin_iap_file/App/MDK-ARM/Outputs/App.build_log.htm
@@ -26,17 +26,34 @@ Project File Date:  05/28/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'stm32f103zet6'
+Rebuild target 'stm32f103zet6'
+assembling startup_stm32f103xe.s...
+compiling stm32f1xx_ll_pwr.c...
+compiling stm32f1xx_ll_exti.c...
+compiling stm32f1xx_ll_gpio.c...
+compiling stm32f1xx_ll_rcc.c...
+compiling gpio.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_it.c...
+compiling main.c...
+compiling stm32f1xx_ll_utils.c...
+compiling lwrb_ex.c...
+compiling myCanDrive_reg.c...
 compiling bsp_systick.c...
+compiling lwrb.c...
+compiling myUsartDrive_reg.c...
+assembling SEGGER_RTT_ASM_ARMv7M.S...
+compiling SEGGER_RTT.c...
+compiling retarget_rtt.c...
+compiling SEGGER_RTT_printf.c...
+compiling MultiTimer.c...
 linking...
 Program Size: Code=4912 RO-data=336 RW-data=4 ZI-data=7396  
 FromELF: creating hex file...
 After Build - User command #1: C:\Keil_v5\ARM\ARMCC\bin\fromelf.exe --bin --output .\Output\App.bin .\Outputs\App.axf
 After Build - User command #2: crc_add.bat
-===============================
- Add CRC32 to App.bin
-===============================
 App.bin size: 5256 bytes
+CRC32 (little-endian stored) : 0x1DB90B70
 CRC32 appended successfully: .\Output\App_crc.bin
 ".\Outputs\App.axf" - 0 Error(s), 0 Warning(s).
 
@@ -62,7 +79,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
