--- a/bootloader08_stm32f103_op_flash/Bootloader/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/bootloader08_stm32f103_op_flash/Bootloader/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -28,10 +28,11 @@ Project File Date:  05/30/2025
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'stm32f103zet6'
 compiling app_jump.c...
-compiling op_flash.c...
 linking...
 Program Size: Code=15460 RO-data=1736 RW-data=144 ZI-data=10912  
 FromELF: creating hex file...
+stm32f103zet6\stm32f103zet6.hex: Warning: Q9931W: Your license for feature Keil will expire in 30 days
+Finished: 0 information, 1 warning and 0 error messages.
 "stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
