--- a/bootloader08_stm32f103_op_flash/Bootloader/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/bootloader08_stm32f103_op_flash/Bootloader/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -22,17 +22,49 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 D:\Coding\MCU_Develop\bootloader08_stm32f103_op_flash\Bootloader\MDK-ARM\stm32f103zet6.uvprojx
-Project File Date:  05/30/2025
+Project File Date:  05/31/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'stm32f103zet6'
+Rebuild target 'stm32f103zet6'
+compiling main.c...
+compiling dma.c...
+compiling gpio.c...
+compiling usart.c...
+compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_it.c...
+assembling startup_stm32f103xe.s...
+compiling lwrb_ex.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_hal_tim.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling bsp_usart_hal.c...
+compiling lwrb.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_exti.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_uart.c...
+assembling SEGGER_RTT_ASM_ARMv7M.S...
+compiling SEGGER_RTT_printf.c...
+compiling SEGGER_RTT.c...
 compiling app_jump.c...
+compiling retarget_rtt.c...
+compiling common.c...
+compiling boot_entry.c...
+compiling soft_crc32.c...
+compiling op_flash.c...
+compiling fw_verify.c...
 linking...
-Program Size: Code=15460 RO-data=1736 RW-data=144 ZI-data=10912  
+Program Size: Code=14766 RO-data=1938 RW-data=144 ZI-data=10952  
 FromELF: creating hex file...
-stm32f103zet6\stm32f103zet6.hex: Warning: Q9931W: Your license for feature Keil will expire in 30 days
-Finished: 0 information, 1 warning and 0 error messages.
 "stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -57,7 +89,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
