--- a/bootloader08_stm32f103_op_flash/Bootloader/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/bootloader08_stm32f103_op_flash/Bootloader/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: ¦ÌVision V5.39.0.0
 Copyright (C) 2023 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: fuwei admin, LT, LIC=DVR3V-8FIHS-FKWBA-EXXCP-ZYPSU-1LV4Y
+License Information: fuwei admin, LT, LIC=P963U-BCJED-DNJA8-GJMS3-CZLPV-2AW1Z
  
 Tool Versions:
 Toolchain:       MDK-ARM Community  Version: 5.39.0.0
@@ -26,44 +26,10 @@ Project File Date:  05/31/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'stm32f103zet6'
-compiling main.c...
-compiling dma.c...
-compiling gpio.c...
-compiling usart.c...
-compiling stm32f1xx_hal_msp.c...
-compiling stm32f1xx_it.c...
-assembling startup_stm32f103xe.s...
-compiling lwrb_ex.c...
-compiling system_stm32f1xx.c...
-compiling stm32f1xx_hal_tim.c...
-compiling stm32f1xx_hal_tim_ex.c...
-compiling stm32f1xx_hal_gpio_ex.c...
-compiling bsp_usart_hal.c...
-compiling lwrb.c...
-compiling stm32f1xx_hal.c...
-compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_flash.c...
-compiling stm32f1xx_hal_exti.c...
-compiling stm32f1xx_hal_flash_ex.c...
-compiling stm32f1xx_hal_uart.c...
-assembling SEGGER_RTT_ASM_ARMv7M.S...
-compiling SEGGER_RTT_printf.c...
-compiling SEGGER_RTT.c...
-compiling app_jump.c...
-compiling retarget_rtt.c...
-compiling common.c...
-compiling boot_entry.c...
-compiling soft_crc32.c...
-compiling op_flash.c...
+Build target 'stm32f103zet6'
 compiling fw_verify.c...
 linking...
-Program Size: Code=14766 RO-data=1938 RW-data=144 ZI-data=10952  
+Program Size: Code=14786 RO-data=1990 RW-data=144 ZI-data=10952  
 FromELF: creating hex file...
 "stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
@@ -89,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:05
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
