--- a/bootloader09_stm32f103_iap_protocol/Bootloader/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/bootloader09_stm32f103_iap_protocol/Bootloader/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -26,10 +26,45 @@ Project File Date:  06/22/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'stm32f103zet6'
+Rebuild target 'stm32f103zet6'
+compiling stm32f1xx_hal_msp.c...
+compiling main.c...
+compiling stm32f1xx_it.c...
+assembling startup_stm32f103xe.s...
+compiling dma.c...
+compiling usart.c...
+compiling gpio.c...
+compiling lwrb_ex.c...
+compiling system_stm32f1xx.c...
+compiling bsp_usart_hal.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling lwrb.c...
+compiling stm32f1xx_hal_tim.c...
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_uart.c...
+compiling stm32f1xx_hal_exti.c...
+assembling SEGGER_RTT_ASM_ARMv7M.S...
+compiling SEGGER_RTT_printf.c...
+compiling SEGGER_RTT.c...
+compiling retarget_rtt.c...
+compiling boot_entry.c...
 compiling app_jump.c...
+compiling common.c...
+compiling soft_crc32.c...
+compiling op_flash.c...
+compiling fw_verify.c...
+compiling ymodem.c...
 linking...
-Program Size: Code=13238 RO-data=642 RW-data=144 ZI-data=10904  
+Program Size: Code=18778 RO-data=2478 RW-data=152 ZI-data=13296  
 FromELF: creating hex file...
 "stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +90,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
