--- a/bootloader09_stm32f103_iap_protocol/Bootloader/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/bootloader09_stm32f103_iap_protocol/Bootloader/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -26,45 +26,10 @@ Project File Date:  06/22/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'stm32f103zet6'
-compiling usart.c...
-assembling startup_stm32f103xe.s...
-compiling dma.c...
-compiling gpio.c...
-compiling stm32f1xx_it.c...
-compiling stm32f1xx_hal_msp.c...
+Build target 'stm32f103zet6'
 compiling main.c...
-compiling lwrb_ex.c...
-compiling stm32f1xx_hal_tim_ex.c...
-compiling system_stm32f1xx.c...
-compiling stm32f1xx_hal_tim.c...
-compiling lwrb.c...
-compiling stm32f1xx_hal_gpio_ex.c...
-compiling bsp_usart_hal.c...
-compiling stm32f1xx_hal.c...
-compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_flash.c...
-compiling stm32f1xx_hal_uart.c...
-compiling stm32f1xx_hal_exti.c...
-compiling stm32f1xx_hal_flash_ex.c...
-compiling SEGGER_RTT_printf.c...
-compiling retarget_rtt.c...
-compiling app_jump.c...
-compiling boot_entry.c...
-compiling common.c...
-compiling SEGGER_RTT.c...
-assembling SEGGER_RTT_ASM_ARMv7M.S...
-compiling soft_crc32.c...
-compiling fw_verify.c...
-compiling op_flash.c...
-compiling ymodem.c...
 linking...
-Program Size: Code=18970 RO-data=2538 RW-data=152 ZI-data=14328  
+Program Size: Code=19054 RO-data=2538 RW-data=152 ZI-data=14328  
 FromELF: creating hex file...
 "stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
@@ -90,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:05
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
