--- a/bootloader10_stm32f103_iap_done/App/MDK-ARM/Outputs/App.build_log.htm
+++ b/bootloader10_stm32f103_iap_done/App/MDK-ARM/Outputs/App.build_log.htm
@@ -28,15 +28,14 @@ Project File Date:  05/28/2025
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'stm32f103zet6'
 compiling bsp_systick.c...
-compiling main.c...
 linking...
-Program Size: Code=4936 RO-data=336 RW-data=4 ZI-data=7396  
+Program Size: Code=6372 RO-data=380 RW-data=8 ZI-data=8608  
 FromELF: creating hex file...
 After Build - User command #1: C:\Keil_v5\ARM\ARMCC\bin\fromelf.exe --bin --output .\Output\App.bin .\Outputs\App.axf
 After Build - User command #2: crc_add.bat
-App.bin size            : 5280 bytes
-CRC32 (little-endian stored): 0xB7D6061A
-App_crc.bin size        : 5284 bytes
+App.bin size            : 6760 bytes
+CRC32 (little-endian stored): 0xE5727708
+App_crc.bin size        : 6764 bytes
 CRC32 appended successfully: .\Output\App_crc.bin
 ".\Outputs\App.axf" - 0 Error(s), 0 Warning(s).
 
