--- a/bootloader10_stm32f103_iap_done/Bootloader/MDK-ARM/stm32f103zet6/stm32f103zet6.htm
+++ b/bootloader10_stm32f103_iap_done/Bootloader/MDK-ARM/stm32f103zet6/stm32f103zet6.htm
@@ -3,9 +3,9 @@
 <title>Static Call Graph - [stm32f103zet6\stm32f103zet6.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image stm32f103zet6\stm32f103zet6.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6210000: Last Updated: Fri Jun 27 08:59:03 2025
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6210000: Last Updated: Fri Jun 27 16:41:38 2025
 <BR><P>
-<H3>Maximum Stack Usage =        432 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
+<H3>Maximum Stack Usage =        424 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
 main &rArr; OP_Flash_Copy &rArr; HAL_FLASH_Program &rArr; FLASH_WaitForLastOperation
 <P>
@@ -770,12 +770,11 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[50]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;_SystemStart
 </UL>
 
-<P><STRONG><a name="[8a]"></a>IAP_Ready_To_Jump_App</STRONG> (Thumb, 172 bytes, Stack size 16 bytes, app_jump.o(.text.IAP_Ready_To_Jump_App))
-<BR><BR>[Stack]<UL><LI>Max Depth = 40<LI>Call Chain = IAP_Ready_To_Jump_App &rArr; __2printf
+<P><STRONG><a name="[8a]"></a>IAP_Ready_To_Jump_App</STRONG> (Thumb, 106 bytes, Stack size 24 bytes, app_jump.o(.text.IAP_Ready_To_Jump_App))
+<BR><BR>[Stack]<UL><LI>Max Depth = 28<LI>Call Chain = IAP_Ready_To_Jump_App &rArr; Delay_MS_By_NOP
 </UL>
 <BR>[Calls]<UL><LI><a href="#[8b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Delay_MS_By_NOP
 <LI><a href="#[73]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_NVIC_SystemReset
-<LI><a href="#[69]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__2printf
 </UL>
 <BR>[Called By]<UL><LI><a href="#[50]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;_SystemStart
 <LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
@@ -867,7 +866,7 @@ Global Symbols
 <BR>[Calls]<UL><LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SEGGER_RTT_SetTerminal
 <LI><a href="#[9d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SEGGER_RTT_ConfigUpBuffer
 </UL>
-<BR>[Called By]<UL><LI><a href="#[50]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;_SystemStart
+<BR>[Called By]<UL><LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
 <P><STRONG><a name="[9d]"></a>SEGGER_RTT_ConfigUpBuffer</STRONG> (Thumb, 214 bytes, Stack size 24 bytes, segger_rtt.o(.text.SEGGER_RTT_ConfigUpBuffer))
@@ -997,7 +996,7 @@ Global Symbols
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> startup_stm32f103xe.o(RESET)
 </UL>
-<P><STRONG><a name="[b8]"></a>YMode_Get_File_Size</STRONG> (Thumb, 6 bytes, Stack size 0 bytes, ymodem.o(.text.YMode_Get_File_Size))
+<P><STRONG><a name="[b9]"></a>YMode_Get_File_Size</STRONG> (Thumb, 6 bytes, Stack size 0 bytes, ymodem.o(.text.YMode_Get_File_Size))
 <BR><BR>[Called By]<UL><LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
@@ -1010,7 +1009,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[b9]"></a>YModem_Has_Response</STRONG> (Thumb, 12 bytes, Stack size 0 bytes, ymodem.o(.text.YModem_Has_Response))
+<P><STRONG><a name="[b8]"></a>YModem_Has_Response</STRONG> (Thumb, 12 bytes, Stack size 0 bytes, ymodem.o(.text.YModem_Has_Response))
 <BR><BR>[Called By]<UL><LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
@@ -1097,17 +1096,17 @@ Global Symbols
 <LI><a href="#[ab]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;USART_Put_TxData_To_Ringbuffer
 </UL>
 
-<P><STRONG><a name="[46]"></a>main</STRONG> (Thumb, 680 bytes, Stack size 80 bytes, main.o(.text.main))
-<BR><BR>[Stack]<UL><LI>Max Depth = 432<LI>Call Chain = main &rArr; OP_Flash_Copy &rArr; HAL_FLASH_Program &rArr; FLASH_WaitForLastOperation
+<P><STRONG><a name="[46]"></a>main</STRONG> (Thumb, 788 bytes, Stack size 72 bytes, main.o(.text.main))
+<BR><BR>[Stack]<UL><LI>Max Depth = 424<LI>Call Chain = main &rArr; OP_Flash_Copy &rArr; HAL_FLASH_Program &rArr; FLASH_WaitForLastOperation
 </UL>
-<BR>[Calls]<UL><LI><a href="#[ab]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;USART_Put_TxData_To_Ringbuffer
+<BR>[Calls]<UL><LI><a href="#[8a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IAP_Ready_To_Jump_App
+<LI><a href="#[ab]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;USART_Put_TxData_To_Ringbuffer
 <LI><a href="#[ad]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;YModem_Get_Response
-<LI><a href="#[b9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;YModem_Has_Response
-<LI><a href="#[8a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IAP_Ready_To_Jump_App
 <LI><a href="#[90]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;OP_Flash_Copy
 <LI><a href="#[b3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;YModem_Reset
 <LI><a href="#[67]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;FW_Firmware_Verification
-<LI><a href="#[b8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;YMode_Get_File_Size
+<LI><a href="#[b9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;YMode_Get_File_Size
+<LI><a href="#[b8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;YModem_Has_Response
 <LI><a href="#[b4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;YModem_Run
 <LI><a href="#[ac]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;USART_Take_A_Piece_Of_Data
 <LI><a href="#[a8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;USART_Get_The_Existing_Amount_Of_Data
@@ -1122,6 +1121,7 @@ Global Symbols
 <LI><a href="#[75]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_RCC_ClockConfig
 <LI><a href="#[76]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_RCC_OscConfig
 <LI><a href="#[6d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_Init
+<LI><a href="#[9c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Retarget_RTT_Init
 <LI><a href="#[69]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__2printf
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> entry9a.o(.ARM.Collect$$$$0000000B)
@@ -1139,7 +1139,6 @@ Global Symbols
 <LI><a href="#[af]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;YModem_Parse_Packet
 <LI><a href="#[50]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;_SystemStart
 <LI><a href="#[ad]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;YModem_Get_Response
-<LI><a href="#[8a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IAP_Ready_To_Jump_App
 <LI><a href="#[b3]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;YModem_Reset
 <LI><a href="#[67]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;FW_Firmware_Verification
 <LI><a href="#[b4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;YModem_Run
@@ -1223,12 +1222,11 @@ Local Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[73]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_NVIC_SystemReset
 </UL>
 
-<P><STRONG><a name="[50]"></a>_SystemStart</STRONG> (Thumb, 52 bytes, Stack size 16 bytes, boot_entry.o(.text._SystemStart))
-<BR><BR>[Stack]<UL><LI>Max Depth = 72<LI>Call Chain = _SystemStart &rArr; Retarget_RTT_Init &rArr; SEGGER_RTT_SetTerminal
+<P><STRONG><a name="[50]"></a>_SystemStart</STRONG> (Thumb, 152 bytes, Stack size 8 bytes, boot_entry.o(.text._SystemStart))
+<BR><BR>[Stack]<UL><LI>Max Depth = 36<LI>Call Chain = _SystemStart &rArr; IAP_Ready_To_Jump_App &rArr; Delay_MS_By_NOP
 </UL>
 <BR>[Calls]<UL><LI><a href="#[b6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IAP_SetUpdateFlag
 <LI><a href="#[b5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IAP_GetUpdateFlag
-<LI><a href="#[9c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Retarget_RTT_Init
 <LI><a href="#[8a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IAP_Ready_To_Jump_App
 <LI><a href="#[69]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__2printf
 </UL>
