--- a/bootloader10_stm32f103_iap_done/App/MDK-ARM/Outputs/App.build_log.htm
+++ b/bootloader10_stm32f103_iap_done/App/MDK-ARM/Outputs/App.build_log.htm
@@ -26,16 +26,35 @@ Project File Date:  05/28/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'stm32f103zet6'
+Rebuild target 'stm32f103zet6'
+compiling stm32f1xx_ll_gpio.c...
+compiling stm32f1xx_ll_pwr.c...
+compiling stm32f1xx_ll_exti.c...
+compiling gpio.c...
+compiling stm32f1xx_it.c...
+compiling main.c...
+assembling startup_stm32f103xe.s...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_ll_utils.c...
+compiling stm32f1xx_ll_rcc.c...
 compiling bsp_systick.c...
+compiling lwrb.c...
+compiling myUsartDrive_reg.c...
+compiling myCanDrive_reg.c...
+compiling lwrb_ex.c...
+assembling SEGGER_RTT_ASM_ARMv7M.S...
+compiling retarget_rtt.c...
+compiling SEGGER_RTT_printf.c...
+compiling MultiTimer.c...
+compiling SEGGER_RTT.c...
 linking...
-Program Size: Code=6372 RO-data=380 RW-data=8 ZI-data=8608  
+Program Size: Code=6392 RO-data=380 RW-data=8 ZI-data=10656  
 FromELF: creating hex file...
 After Build - User command #1: C:\Keil_v5\ARM\ARMCC\bin\fromelf.exe --bin --output .\Output\App.bin .\Outputs\App.axf
 After Build - User command #2: crc_add.bat
-App.bin size            : 6760 bytes
-CRC32 (little-endian stored): 0xE5727708
-App_crc.bin size        : 6764 bytes
+App.bin size            : 6784 bytes
+CRC32 (little-endian stored): 0x6B394D64
+App_crc.bin size        : 6788 bytes
 CRC32 appended successfully: .\Output\App_crc.bin
 ".\Outputs\App.axf" - 0 Error(s), 0 Warning(s).
 
@@ -61,7 +80,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
