1、优化李承代码。

--- a/stm32f103_hal_usart_dma_ringbuffer/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/stm32f103_hal_usart_dma_ringbuffer/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: ¦ÌVision V5.39.0.0
 Copyright (C) 2023 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: fuwei admin, LT, LIC=DVR3V-8FIHS-FKWBA-EXXCP-ZYPSU-1LV4Y
+License Information: fuwei admin, LT, LIC=P963U-BCJED-DNJA8-GJMS3-CZLPV-2AW1Z
  
 Tool Versions:
 Toolchain:       MDK-ARM Community  Version: 5.39.0.0
@@ -26,33 +26,34 @@ Project File Date:  05/23/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'stm32f103zet6'
-compiling main.c...
-compiling system_stm32f1xx.c...
-compiling stm32f1xx_hal_msp.c...
+Rebuild target 'stm32f103zet6'
 compiling gpio.c...
-compiling dma.c...
+compiling stm32f1xx_hal_msp.c...
 compiling usart.c...
+compiling dma.c...
+compiling main.c...
 compiling stm32f1xx_it.c...
+assembling startup_stm32f103xe.s...
 compiling lwrb_ex.c...
 compiling stm32f1xx_hal_tim.c...
-compiling stm32f1xx_hal_gpio_ex.c...
+compiling system_stm32f1xx.c...
 compiling stm32f1xx_hal_tim_ex.c...
 compiling lwrb.c...
+compiling stm32f1xx_hal_gpio_ex.c...
 compiling bsp_usart_hal.c...
 compiling stm32f1xx_hal.c...
 compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal_rcc.c...
 compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_uart.c...
 compiling stm32f1xx_hal_dma.c...
 compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_exti.c...
 compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_exti.c...
 compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_uart.c...
 linking...
-Program Size: Code=9744 RO-data=380 RW-data=144 ZI-data=9432  
+Program Size: Code=9850 RO-data=378 RW-data=144 ZI-data=2264  
 FromELF: creating hex file...
 "stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
